--- a/influxdb/map.jinja
+++ b/influxdb/map.jinja
@@ -1,44 +1,66 @@
-{% import_yaml "influxdb/defaults.yaml" as defaults %}
-{% import_yaml "influxdb/config_defaults.yaml" as config_defaults %}
+{#- -*- coding: utf-8 -*- #}
+{#- vim: ft=jinja #}
 
-{#-
-Setup variable using grains['os_family'] based logic, only add key:values here
-that differ from whats in defaults.yaml
-#}
+{#- Get the `tplroot` from `tpldir` #}
+{%- set tplroot = tpldir.split("/")[0] %}
+{%- from tplroot ~ "/libmapstack.jinja" import mapstack with context %}
 
-{% set os_family_map = salt['grains.filter_by']({
-   'Debian': {},
-   'RedHat': {},
-   'Suse': {},
-  },
-  grain="os_family",
-  merge=salt['pillar.get']('influxdb:lookup'))
-%}
+{#- Where to lookup parameters source files #}
+{%- set formula_param_dir = tplroot ~ "/parameters" %}
 
-{#-
-Use configuration defaults appropriate for the version of InfluxDB that is being
-installed unless the user explicitly requested to not use any default values in
-which case normal pillar merging behaviour will be used.
+{#- List of sources to lookup for parameters #}
+{#- Fallback to previously used grains plus minion `id` #}
+{%- set map_sources = [
+      "Y:G@osarch",
+      "Y:G@os_family",
+      "Y:G@os",
+      "Y:G@osfinger",
+      "C@" ~ tplroot ~ ":lookup",
+      "C@" ~ tplroot,
+      "Y:G@id",
+    ] %}
 
-The formula supports different configuration file formats for each MAJOR.MINOR
-version of InfluxDB and will provide the configuration that ships with the
-latest release off that branch.
-#}
+{%- set _map_settings = mapstack(
+      matchers=["map_jinja.yaml"],
+      defaults={
+        "values": {"sources": map_sources}
+      },
+      log_prefix="map.jinja configuration: ",
+    )
+    | load_yaml %}
 
-{% if not salt['pillar.get']('influxdb:no_conf_defaults', False) %}
-{% set influxdb_version = salt['pillar.get']('influxdb:version') %}
-{% set major, minor = influxdb_version.split('.')[:2] %}
-{% do defaults.influxdb.conf.update(config_defaults.get(major).get(minor)) %}
-{% endif %}
+{%- set map_sources = _map_settings | traverse("values:sources") %}
+{%- do salt["log.debug"](
+      "map.jinja: load parameters from sources:\n"
+      ~ map_sources
+      | yaml(False)
+    ) %}
 
-{#- Merge the os_family_map into default settings #}
-{% do defaults.influxdb.update(os_family_map) %}
+{#- Load formula parameters values #}
+{%- set _formula_matchers = ["defaults.yaml"] + map_sources %}
 
-{# Update settings defaults from pillar data #}
-{% set influxdb_settings = salt['pillar.get'](
-    'influxdb',
-    default=defaults.influxdb,
-    merge=True)
-%}
+{%- set _formula_settings = mapstack(
+      matchers=_formula_matchers,
+      dirs=[formula_param_dir],
+      defaults={
+        "values": {},
+        "merge_strategy": salt["config.get"](tplroot ~ ":strategy", None),
+        "merge_lists": salt["config.get"](tplroot ~ ":merge_lists", False),
+      },
+      log_prefix="map.jinja: ",
+    )
+    | load_yaml %}
 
-# vi: set ft=sls :
+{#- Make sure to track `map.jinja` configuration with `_mapdata` #}
+{%- do _formula_settings["values"].update(
+      {
+        "map_jinja": _map_settings["values"]
+      }
+    ) %}
+
+{%- do salt["log.debug"]("map.jinja: save parameters in variable 'mapdata'") %}
+{%- set mapdata = _formula_settings["values"] %}
+
+{#- Per formula post-processing of `mapdata` if it exists #}
+{%- do salt["log.debug"]("map.jinja: post-processing of 'mapdata'") %}
+{%- include tplroot ~ "/post-map.jinja" ignore missing %}
